[package]
name = "rust-ecvrf"
version = "0.0.1"
authors = ["Jude Nelson <judecn@gmail.com>"]
license = "GPLv3"
homepage = "https://github.com/jcnelson/rust-ecvrf"
repository = "https://github.com/jcnelson/rust-ecrf"
description = "Rust tool for generating and verifying ECVRFs on the Ed25519 curve using the Ristretto group"
keywords = [ "cryptography", "vrf" ]
readme = "README.md"

[dependencies]
rand = "0.5"
sha2 = "0.8.0"
serde = "1"
serde_derive = "1"
bincode = "1.0.1"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.0"
features = ["serde"]

[dependencies.curve25519-dalek]
version = "1.0.0-pre.0"
features = ["serde"]
